# Regular-inspection

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  FIXES_GUIDE.md  FIXES_SUMMARY.md  QUICKSTART.md  QUICK_FIXES.md  README.md  TROUBLESHOOTING.md  UPGRADE.md  balance_data.json  balance_hash.txt  checkin.py  checkin.py.bak  clean_commit_msg.py  config.py  debug_api_auth.py  docker-compose.yml  main.py  main.py.bak  notify.py  notify.py.bak  pyproject.toml  requirements.txt  test_final_fixes.py  test_fixes.py  test_github_actions_fix.py  test_imports.py
.claude/: commit-guidelines.md  settings.local.json
.github/workflows/: auto-checkin.yml
docs/: ANTI_DETECTION.md  DOCKER.md
utils/: __init__.py  auth.py  ci_config.py  config.py  constants.py  logger.py  notify.py  sanitizer.py  session_cache.py  validator.py
